--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         <div class="row">
             <section class="12u 12u(2)">
                 <h3>Get In Touch</h3>
-                <p>Email us at:</p>
+                <p>Email us at: turbantravels@gmail.com</p>
 
                 <form>
                     <div class="row 50%">
