--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
     <div class="copyright">
         <ul class="menu">
             <li>&copy; Turban Travels. All rights reserved</li>
-            <li>Site by: <a href="http://html5up.net">WebDoctorz</a></li>
+            <li>Site by: <a href="http://webdoctorz.com">WebDoctorz</a></li>
         </ul>
     </div>
 
