--- a/packages.html
+++ b/packages.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>No Sidebar - Arcana by HTML5 UP</title>
+    <title>Packages</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
